# ML-Code-Collection

./: .gitignore
AWS/: aws-s3-boto3.ipynb
BERT/: .gitignore  classification.ipynb  st.ipynb
BERT/2_Classification/: classification.ipynb
BERT/3_Resume_Classification/: res.ipynb
CNN/: cnn_1.ipynb  cnn_ann.ipynb  data_augmenataion.ipynb  fashion-mnist.ipynb  fashion_mnist.ipynb
CNN/Potato Disease Classification/: cnn.ipynb
Iris Datasets/: Hyper_Parameter_Tuning.ipynb  K_Fold_Cross_Validation.ipynb
LLM/ChatPDF/: .env.sample  .gitignore  (+3 more)
LLM/email-agent/: .env.sample  .gitignore  README.md  email_tools.py  main.py  pyproject.toml
LLM/intro-to-langgraph/: .gitignore  pyproject.toml
LLM/intro-to-langgraph/module-0/: basic.ipynb
LLM/intro-to-langgraph/module-1/: 1_simple_graph.ipynb  2_chain.ipynb  3_router.ipynb  4_agent.ipynb  5_agent_memory.ipynb
LLM/intro-to-langgraph/module-1/studio/: requirements.txt  router.py
LLM/intro-to-langgraph/module-3/: 1_streaming-interruption.ipynb  2_breakpoints.ipynb  3_edit-state-human-feedback.ipynb  4_dynamic-breakpoints.ipynb  5_time-travel.ipynb  readme.md
LLM/intro-to-langgraph/module-3/studio/: .env.example  agent.py  requirements.txt
LLM/intro-to-langgraph/module-4/: 1_parallelization.ipynb  3_map-reduce.ipynb  4_research-assistant.ipynb
LLM/intro-to-langgraph/module-4/studio/: .env.example  map_reduce.py  parallelization.py  requirements.txt  research_assistant.py  sub_graphs.py
LLM/langgraph-tutorial/: 01_basic_chatbot.py  02_tools.ipynb  03_memory.ipynb  04_human_in_the_loop.ipynb  pyproject.toml
LLM/sql-agent/: .env.sample  agent.ipynb  main.py  pyproject.toml
NN from scratch/: ANN.ipynb  NN_from_scratch.ipynb
Numpy/: Numpy Tutorial.ipynb
Pandas/: Pd Tutorial 2.ipynb  pandas_pytest.ipynb
Real Estate Price Prediction/: House_Price_Prediction.ipynb
Titanic/: titanic.ipynb
(+45 files in other folders)
