[project]
name = "langchain-academy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-tavily>=0.2.6",
    "langchain[google-genai]>=0.3.26",
    "langgraph>=0.5.1",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-prebuilt>=0.5.2",
    "langgraph-sdk>=0.1.72",
    "langsmith>=0.4.4",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
